[package]
name = "rust-avalanche"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
contour = { version = "0.13.1", features = ["geojson"] }
dotenvy = "0.15.7"
gdal = "0.19.0"
geo = "0.32.0"
geo-types = "0.7.18"
geojson = "1.0.0"
proj = "0.31.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
tempfile = "3.27.0"
