[package]
name = "rust-avalanche"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
contour = { version = "0.13.1", features = ["geojson"] }
dotenvy = "0.15.7"
gdal = "0.19.0"
geo = "0.32.0"
geo-types = "0.7.18"
geojson = "1.0.0"
log = "0.4.29"
proj = "0.31.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
tempfile = "3.27.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["fs"] }
